--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ kiwisolver==1.4.5
 MarkupSafe==2.1.5
 matplotlib==3.9.1
 matplotlib-inline==0.1.7
-mercurial==6.3.2
+# mercurial==6.3.2
 mistune==3.0.2
 nbclient==0.10.0
 nbconvert==7.16.4
@@ -64,7 +64,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.2.1
 notebook_shim==0.2.4
-numpy
+numpy==1.26.4
 outcome==1.3.0.post0
 overrides==7.7.0
 packaging==24.1
@@ -87,7 +87,7 @@ PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.1
-PyYAML==6.0
+# PyYAML==6.0
 pyzmq==26.0.3
 qtconsole==5.5.2
 QtPy==2.4.1
